--- a/order-status.html
+++ b/order-status.html
@@ -13,6 +13,7 @@
       background: #f4f6f9;
       color: #222;
       padding: 20px;
+      transition: background 0.2s, color 0.2s;
     }
     h1 {
       text-align: center;
@@ -25,6 +26,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       padding: 20px;
+      transition: background 0.2s, color 0.2s;
     }
     .order-number {
       font-size: 1.5em;
@@ -35,6 +37,7 @@
       background: #ffebee;
       padding: 10px;
       border-radius: 8px;
+      transition: background 0.2s, color 0.2s;
     }
     .order-datetime {
       text-align: center;
@@ -67,10 +70,62 @@
       color: white;
       font-weight: bold;
       cursor: pointer;
+      transition: background 0.2s;
+    }
+    /* --- DARK MODE --- */
+    body.dark-mode {
+      background: #181a20 !important;
+      color: #f4f6f9 !important;
+    }
+    body.dark-mode h1 {
+      color: #00eaff !important;
+    }
+    body.dark-mode .order-box {
+      background: #23262f !important;
+      color: #f4f6f9 !important;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.32);
+    }
+    body.dark-mode .order-number {
+      background: #2d2f3a !important;
+      color: #ff5252 !important;
+    }
+    body.dark-mode .order-datetime {
+      color: #00eaff !important;
+    }
+    body.dark-mode .item {
+      border-bottom: 1px solid #333 !important;
+      color: #f4f6f9 !important;
+    }
+    body.dark-mode .status {
+      color: #66bb6a !important;
+    }
+    body.dark-mode .back button {
+      background: linear-gradient(90deg, #23262f 60%, #00aaff 100%) !important;
+      color: #fff !important;
+    }
+    body.dark-mode .back button:hover {
+      background: linear-gradient(90deg, #00aaff 60%, #23262f 100%) !important;
     }
   </style>
 </head>
 <body>
+  <!-- Add this at the very top inside <body> -->
+  <div style="position: absolute; left: 18px; top: 18px; z-index: 10;">
+    <button onclick="window.history.back()" style="background:none;border:none;font-size:2rem;cursor:pointer;color:#005f73;">
+      &#8592;
+    </button>
+  </div>
+  <script>
+    // Dark mode support based on localStorage setting
+    function applyDarkMode() {
+      if (localStorage.getItem('darkMode') === 'on') {
+        document.body.classList.add('dark-mode');
+      } else {
+        document.body.classList.remove('dark-mode');
+      }
+    }
+    applyDarkMode();
+  </script>
   <!-- Add Firebase SDKs at the top of body -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
@@ -91,7 +146,10 @@
     <p class="status">Status: <span id="order-status">Pending</span></p>
   </div>
   <div class="back">
-    <button onclick="window.location.href='student-home.html'">Back to Home</button>
+    <button onclick="window.location.href='student-home.html'">Home</button>
+    <button style="margin-left:10px; background:linear-gradient(90deg,#00aaff 60%,#005f73 100%);" onclick="window.location.href='shop-list.html'">
+      🛒 Shop List
+    </button>
   </div>
   <audio id="ding-sound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" preload="auto"></audio>
 
