--- a/summary.html
+++ b/summary.html
@@ -23,47 +23,49 @@
       z-index: -1;
     }
     #summary-container {
-      background: rgba(255,255,255,0.75);
+      background: rgba(255,255,255,0.95);
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.16), 0 1.5px 0 0 #e5e5e5 inset;
       border-radius: 18px;
-      max-width: 600px;
-      margin: 48px auto 0 auto;
-      padding: 2.2rem 1.5rem 2rem 1.5rem;
+      max-width: 420px;
+      margin: 32px auto 0 auto;
+      padding: 1.2rem 1rem 1.2rem 1rem;
       position: relative;
       backdrop-filter: blur(2px);
+      width: 96vw;
     }
     #summary-container h1 {
       text-align: center;
-      font-size: 2rem;
+      font-size: 1.5rem;
       font-weight: 700;
       color: #005f73;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.2rem;
       letter-spacing: 0.5px;
       text-shadow: 0 2px 8px rgba(0,0,0,0.04);
     }
     .item {
       display: flex;
       justify-content: space-between;
-      margin: 0.75rem 0;
-      font-size: 1.08rem;
+      margin: 0.55rem 0;
+      font-size: 1.02rem;
       color: #222;
       font-weight: 500;
       border-bottom: 1px solid #e3eafc;
-      padding-bottom: 0.5rem;
+      padding-bottom: 0.4rem;
+      word-break: break-word;
     }
     .item:last-child {
       border-bottom: none;
     }
     .total {
       font-weight: bold;
-      font-size: 1.2rem;
-      margin-top: 1.5rem;
+      font-size: 1.08rem;
+      margin-top: 1.1rem;
       text-align: right;
       color: #005f73;
       letter-spacing: 0.5px;
     }
     .delivery-section {
-      margin-top: 1.5rem;
+      margin-top: 1.1rem;
     }
     .delivery-section label {
       display: block;
@@ -75,6 +77,7 @@
       display: flex;
       gap: 1rem;
       align-items: center;
+      flex-wrap: wrap;
     }
     .delivery-options label {
       display: flex;
@@ -83,6 +86,8 @@
       font-weight: normal;
       position: relative;
       padding-left: 2rem;
+      font-size: 0.98rem;
+      margin-bottom: 0.3rem;
     }
     .delivery-options input[type="radio"] {
       position: absolute;
@@ -125,7 +130,7 @@
       font-size: 1.2rem;
     }
     .note-section {
-      margin-top: 1.5rem;
+      margin-top: 1.1rem;
     }
     .note-section label {
       display: block;
@@ -142,16 +147,17 @@
       font-size: 1rem;
       resize: vertical;
       min-height: 60px;
+      box-sizing: border-box;
     }
     .actions {
       display: flex;
-      justify-content: space-between;
-      margin-top: 2rem;
-      gap: 18px;
+      flex-direction: column;
+      gap: 12px;
+      margin-top: 1.5rem;
     }
     .actions button {
-      flex: 1;
-      padding: 0.85rem 1.5rem;
+      width: 100%;
+      padding: 0.85rem 0;
       border: none;
       border-radius: 8px;
       font-size: 1.08rem;
@@ -164,7 +170,6 @@
     .confirm {
       background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
       color: white;
-      margin-left: 8px;
     }
     .confirm:active {
       background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
@@ -173,7 +178,6 @@
     .cancel {
       background: linear-gradient(90deg, #dc3545 60%, #ff6f6f 100%);
       color: white;
-      margin-right: 8px;
     }
     .cancel:active {
       background: linear-gradient(90deg, #b71c1c 60%, #dc3545 100%);
@@ -257,38 +261,76 @@
 
     @media (max-width: 700px) {
       #summary-container {
-        max-width: 98vw;
-        margin-top: 18px;
-        padding: 1.2rem 0.5rem 1.2rem 0.5rem;
-      }
-      #summary-container h1 {
-        font-size: 1.3rem;
-      }
-      .delivery-options {
-        flex-direction: column;
-        gap: 0.5rem;
-        align-items: flex-start;
-      }
-      .actions button {
-        font-size: 1rem;
-        padding: 0.7rem 0.5rem;
-      }
-    }
-    @media (max-width: 500px) {
-      #summary-container {
         max-width: 99vw;
-        margin-top: 8px;
+        margin-top: 12px;
         padding: 0.7rem 0.2rem 0.7rem 0.2rem;
+        border-radius: 12px;
       }
       #summary-container h1 {
-        font-size: 1.1rem;
+        font-size: 1.15rem;
+        margin-bottom: 0.7rem;
+      }
+      .item {
+        font-size: 0.98rem;
+        padding-bottom: 0.2rem;
+      }
+      .total {
+        font-size: 1rem;
+        margin-top: 0.7rem;
+      }
+      .delivery-section, .note-section {
+        margin-top: 0.7rem;
       }
       .actions {
         gap: 8px;
+        margin-top: 1rem;
       }
       .actions button {
-        font-size: 0.95rem;
-        padding: 0.5rem 0.2rem;
+        font-size: 0.97rem;
+        padding: 0.6rem 0;
+        border-radius: 7px;
+      }
+      .mamak-note {
+        font-size: 0.92em;
+        padding: 7px 8px;
+        border-radius: 7px;
+      }
+    }
+    @media (max-width: 430px) {
+      #summary-container {
+        max-width: 100vw;
+        margin-top: 4px;
+        padding: 0.3rem 0.1rem 0.3rem 0.1rem;
+        border-radius: 8px;
+      }
+      #summary-container h1 {
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+      }
+      .item {
+        font-size: 0.93rem;
+        padding-bottom: 0.1rem;
+      }
+      .total {
+        font-size: 0.93rem;
+        margin-top: 0.4rem;
+      }
+      .delivery-section, .note-section {
+        margin-top: 0.4rem;
+      }
+      .actions {
+        gap: 6px;
+        margin-top: 0.7rem;
+      }
+      .actions button {
+        font-size: 0.93rem;
+        padding: 0.45rem 0;
+        border-radius: 6px;
+      }
+      .mamak-note {
+        font-size: 0.89em;
+        padding: 5px 6px;
+        border-radius: 6px;
       }
     }
   </style>
