--- a/shop-list.html
+++ b/shop-list.html
@@ -387,10 +387,27 @@
       border: 1.5px solid #444;
     }
     @media (max-width: 700px) {
+      .shoplist-bar {
+        max-width: 100vw;
+        flex-direction: column;
+        gap: 8px;
+        padding: 0 8px;
+        align-items: stretch;
+      }
+      #shopSearch, #shopSort {
+        width: 100%;
+        min-width: 0;
+        max-width: 100vw;
+        font-size: 1rem;
+        border-radius: 18px;
+        box-sizing: border-box;
+        margin: 0 0 8px 0;
+        display: block;
+      }
       .container {
         max-width: 100vw;
         margin: 0 0 32px 0;
-        padding: 8px 4px 48px 4px;
+        padding: 8px 2vw 48px 2vw;
         gap: 12px;
         border-radius: 10px;
         margin-top: 56px !important;
@@ -401,49 +418,6 @@
         margin: 0 auto 10px auto;
         border-radius: 10px;
         font-size: 0.98rem;
-      }
-      .shop-card img {
-        height: 90px;
-      }
-      .caf-title {
-        font-size: 1.7rem;
-        margin-left: 8px;
-        letter-spacing: 1.2px;
-        line-height: 1.3;
-        gap: 8px;
-        margin-top: 18px;
-      }
-      .header-bar {
-        max-width: 100vw;
-        padding-top: 4px;
-        align-items: flex-start;
-        position: relative;
-      }
-      .profile-btn {
-        position: absolute;
-        top: 18px;
-        right: 8px;
-        margin: 0;
-      }
-      .shoplist-bar {
-        max-width: 100vw;
-        flex-direction: column;
-        gap: 8px;
-        padding: 0 8px;
-      }
-      #shopSearch, #shopSort {
-        width: 100%;
-        font-size: 1rem;
-        border-radius: 18px;
-      }
-      .shop-card .fav-icon {
-        bottom: 10px;
-        right: 12px;
-        font-size: 2rem;
-      }
-      .shop-card .fav-icon svg {
-        width: 2rem;
-        height: 2rem;
       }
     }
     /* Dark mode styles */
