--- a/shop-list.html
+++ b/shop-list.html
@@ -389,9 +389,10 @@
     @media (max-width: 700px) {
       .shoplist-bar {
         max-width: 100vw;
+        width: 100vw;
         flex-direction: column;
         gap: 8px;
-        padding: 0 8px;
+        padding: 0 2vw;
         align-items: stretch;
       }
       #shopSearch, #shopSort {
@@ -399,25 +400,11 @@
         min-width: 0;
         max-width: 100vw;
         font-size: 1rem;
-        border-radius: 18px;
+        border-radius: 12px;
         box-sizing: border-box;
         margin: 0 0 8px 0;
+        padding: 10px 12px;
         display: block;
-      }
-      .container {
-        max-width: 100vw;
-        margin: 0 0 32px 0;
-        padding: 8px 2vw 48px 2vw;
-        gap: 12px;
-        border-radius: 10px;
-        margin-top: 56px !important;
-      }
-      .shop-card {
-        min-width: 98vw;
-        max-width: 99vw;
-        margin: 0 auto 10px auto;
-        border-radius: 10px;
-        font-size: 0.98rem;
       }
     }
     /* Dark mode styles */
