--- a/shop-list.html
+++ b/shop-list.html
@@ -466,6 +466,42 @@
         height: 2rem;
       }
     }
+    @media (max-width: 700px) {
+      .shoplist-bar {
+        max-width: 100vw;
+        width: 100vw;
+        flex-direction: row;
+        gap: 8px;
+        padding: 0 2vw;
+        align-items: center;
+        justify-content: flex-start;
+        margin-top: 10px;
+        margin-bottom: 8px;
+        position: relative;
+      }
+      #shopSearch {
+        width: 62vw;
+        min-width: 110px;
+        max-width: 68vw;
+        font-size: 1rem;
+        border-radius: 14px;
+        box-sizing: border-box;
+        margin: 0 0 0 2vw;
+        padding: 10px 12px;
+        display: inline-block;
+      }
+      #shopSort {
+        width: 24vw;
+        min-width: 60px;
+        max-width: 28vw;
+        font-size: 1rem;
+        border-radius: 14px;
+        box-sizing: border-box;
+        margin: 0 0 0 10px;
+        padding: 10px 12px;
+        display: inline-block;
+      }
+    }
     /* Dark mode styles */
     body.dark-mode {
       background: #181a20 !important;
