--- a/shop-list.html
+++ b/shop-list.html
@@ -468,38 +468,23 @@
     }
     @media (max-width: 700px) {
       .shoplist-bar {
-        max-width: 100vw;
-        width: 100vw;
-        flex-direction: row;
+        max-width: 96vw;
+        width: 96vw;
+        margin: 28px auto 10px auto;
+        padding: 0 3vw;
         gap: 8px;
-        padding: 0 2vw;
-        align-items: center;
-        justify-content: flex-start;
-        margin-top: 10px;
-        margin-bottom: 8px;
-        position: relative;
+        justify-content: center;
       }
       #shopSearch {
-        width: 62vw;
-        min-width: 110px;
-        max-width: 68vw;
-        font-size: 1rem;
-        border-radius: 14px;
-        box-sizing: border-box;
-        margin: 0 0 0 2vw;
-        padding: 10px 12px;
-        display: inline-block;
+        flex: 1;
+        width: auto;
+        max-width: 60vw;
+        margin: 0;
       }
       #shopSort {
-        width: 24vw;
-        min-width: 60px;
-        max-width: 28vw;
-        font-size: 1rem;
-        border-radius: 14px;
-        box-sizing: border-box;
-        margin: 0 0 0 10px;
-        padding: 10px 12px;
-        display: inline-block;
+        width: auto;
+        min-width: 90px;
+        margin-left: 6px;
       }
     }
     /* Dark mode styles */
