--- a/shop-list.html
+++ b/shop-list.html
@@ -41,7 +41,7 @@
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 auto;
-      color: #0f4c81;
+      color: #004aad; /* new default color */
       text-shadow: 0 8px 32px rgba(0,0,0,0.22), 0 2px 4px rgba(0,0,0,0.18);
       font-family: 'Lato', Arial, sans-serif;
       line-height: 1.25;
@@ -414,8 +414,9 @@
       .header-bar {
         max-width: 100vw;
         padding-top: 4px;
-        align-items: flex-start;
-        position: relative;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
       }
       .profile-btn {
         position: absolute;
@@ -468,21 +469,22 @@
       .shoplist-bar {
         max-width: 96vw;
         width: 96vw;
-        margin: 28px auto 10px auto;
+        margin: 30px auto 10px auto;
         padding: 0 3vw;
         gap: 8px;
-        justify-content: center;
+        flex-direction: column;
+        align-items: stretch;
       }
       #shopSearch {
-        flex: 1;
-        width: auto;
-        max-width: 60vw;
+        width: 100%;
+        max-width: none;
         margin: 0;
       }
       #shopSort {
-        width: auto;
-        min-width: 90px;
-        margin-left: 6px;
+        width: 32vw;
+        max-width: 32vw;
+        align-self: flex-end;
+        margin: 6px 0 0 0;
       }
     }
     /* Dark mode styles */
