--- a/shop-list.html
+++ b/shop-list.html
@@ -27,27 +27,27 @@
       max-width: 900px;
       margin: 0 auto;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 24px 0 0 0;
+      padding: 40px 24px 0 24px;
       position: relative;
       z-index: 2;
-      background: transparent;
+      gap: 6px;
     }
     .caf-title {
       flex: 0 0 auto;
+      width: 100%;
       text-align: center;
-      font-size: 2.7rem;
-      font-weight: 900;
-      letter-spacing: 2.5px;
-      margin: 0 auto;
-      color: #004aad; /* new default color */
-      text-shadow: 0 8px 32px rgba(0,0,0,0.22), 0 2px 4px rgba(0,0,0,0.18);
-      font-family: 'Lato', Arial, sans-serif;
-      line-height: 1.25;
+      font-size: 2.8rem;
+      letter-spacing: 2px;
+      margin: 0;
+      color: #0a3d62;
+      text-shadow: 0 8px 32px rgba(0,0,0,0.18), 0 4px 12px rgba(0,0,0,0.12);
       display: flex;
       align-items: center;
-      gap: 16px;
+      justify-content: center;
+      gap: 10px;
     }
     .profile-btn {
       background: none;
@@ -111,17 +111,17 @@
     }
     .shoplist-bar {
       max-width: 900px;
-      width: 100%;
+      width: calc(100% - 32px);
       margin: 18px auto 0 auto;
       display: flex;
       gap: 12px;
       align-items: center;
       justify-content: center;
-      z-index: 10;
-      background: none !important; /* Remove background */
-      box-shadow: none !important;  /* Remove any shadow */
-      border-radius: 0 !important;
-      padding: 0;
+      background: #fff;
+      box-shadow: 0 12px 32px rgba(10,61,98,0.08);
+      border-radius: 22px;
+      padding: 14px 18px;
+      border: 1px solid #e3e8ef;
     }
     #shopSearch {
       flex: 1;
@@ -385,106 +385,31 @@
       border: 1.5px solid #444;
     }
     @media (max-width: 700px) {
-      .container {
-        max-width: 100vw;
-        margin: 0 0 32px 0;
-        padding: 8px 4px 48px 4px;
-        gap: 12px;
-        border-radius: 10px;
-        margin-top: 56px !important;
-      }
-      .shop-card {
-        min-width: 98vw;
-        max-width: 99vw;
-        margin: 0 auto 10px auto;
-        border-radius: 10px;
-        font-size: 0.98rem;
-      }
-      .shop-card img {
-        height: 90px;
-      }
-      .caf-title {
-        font-size: 1.7rem;
-        margin-left: 8px;
-        letter-spacing: 1.2px;
-        line-height: 1.3;
-        gap: 8px;
-        margin-top: 18px;
-      }
       .header-bar {
         max-width: 100vw;
-        padding-top: 4px;
-        flex-direction: column;
-        align-items: center;
-        gap: 12px;
+        padding: 48px 18px 0 18px;
       }
-      .profile-btn {
-        position: absolute;
-        top: 18px;
-        right: 8px;
-        margin: 0;
-      }
-      .shoplist-bar {
-        max-width: 100vw;
-        width: 100vw;
-        flex-direction: row;
-        gap: 8px;
-        padding: 0 2vw;
-        align-items: center;
-        justify-content: center;
-      }
-      #shopSearch {
-        width: 65vw;
-        min-width: 120px;
-        max-width: 70vw;
-        font-size: 1rem;
-        border-radius: 14px;
-        box-sizing: border-box;
-        margin: 0;
-        padding: 10px 12px;
-        display: inline-block;
-      }
-      #shopSort {
-        width: 28vw;
-        min-width: 70px;
-        max-width: 32vw;
-        font-size: 1rem;
-        border-radius: 14px;
-        box-sizing: border-box;
-        margin: 0;
-        padding: 10px 12px;
-        display: inline-block;
-      }
-      .shop-card .fav-icon {
-        bottom: 10px;
-        right: 12px;
+      .caf-title {
         font-size: 2rem;
+        letter-spacing: 1.2px;
       }
-      .shop-card .fav-icon svg {
-        width: 2rem;
-        height: 2rem;
-      }
-    }
-    @media (max-width: 700px) {
       .shoplist-bar {
         max-width: 96vw;
-        width: 96vw;
-        margin: 30px auto 10px auto;
-        padding: 0 3vw;
-        gap: 8px;
+        width: calc(100% - 16px);
+        margin: 20px auto 10px auto;
+        padding: 14px 16px 18px 16px;
         flex-direction: column;
         align-items: stretch;
       }
       #shopSearch {
         width: 100%;
         max-width: none;
-        margin: 0;
       }
       #shopSort {
         width: 32vw;
+        min-width: 110px;
         max-width: 32vw;
         align-self: flex-end;
-        margin: 6px 0 0 0;
       }
     }
     /* Dark mode styles */
