--- a/shop-list.html
+++ b/shop-list.html
@@ -30,36 +30,26 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 40px 24px 0 24px;
+      padding: 20px 16px;
       position: relative;
-      z-index: 2;
-      gap: 6px;
+      gap: 12px;
     }
     .caf-title {
-      flex: 0 0 auto;
-      width: 100%;
       text-align: center;
-      font-size: 2.8rem;
-      letter-spacing: 2px;
+      font-size: 2.2rem;
+      font-weight: 900;
+      letter-spacing: 1.5px;
+      color: #004aad;
+      text-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
       margin: 0;
-      color: #0a3d62;
-      text-shadow: 0 8px 32px rgba(0,0,0,0.18), 0 4px 12px rgba(0,0,0,0.12);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
     }
     .profile-btn {
+      position: absolute;
+      top: 16px;
+      right: 16px;
       background: none;
       border: none;
-      outline: none;
       cursor: pointer;
-      margin: 0;
-      padding: 0;
-      position: absolute;
-      top: 24px;
-      right: 24px;
-      z-index: 10;
     }
     .profile-btn img {
       width: 48px;
@@ -110,46 +100,34 @@
       color: #172b90;
     }
     .shoplist-bar {
-      max-width: 900px;
-      width: calc(100% - 32px);
-      margin: 18px auto 0 auto;
+      width: 100%;
+      max-width: 96vw;
+      margin: 10px auto 0 auto;
       display: flex;
-      gap: 12px;
-      align-items: center;
-      justify-content: center;
-      background: #fff;
-      box-shadow: 0 12px 32px rgba(10,61,98,0.08);
-      border-radius: 22px;
-      padding: 14px 18px;
-      border: 1px solid #e3e8ef;
+      flex-direction: column;
+      gap: 8px;
+      align-items: stretch;
+      padding: 0 16px;
     }
     #shopSearch {
-      flex: 1;
-      padding: 12px 18px;
+      width: 100%;
+      padding: 12px 16px;
       border-radius: 24px;
       border: 1.5px solid #b0b0b0;
-      font-size: 1.08rem;
+      font-size: 1rem;
       background: #fafbfc;
-      color: #222;
-      outline: none;
-      transition: border 0.2s, box-shadow 0.2s;
-      box-shadow: none;
-    }
-    #shopSearch:focus {
-      border: 1.5px solid #0077b6;
-      background: #fff;
-      box-shadow: 0 2px 8px rgba(0,119,182,0.08);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
     #shopSort {
-      padding: 12px 18px;
+      width: 100%;
+      max-width: 120px;
+      align-self: flex-end;
+      padding: 10px 12px;
       border-radius: 24px;
       border: 1.5px solid #b0b0b0;
-      font-size: 1.08rem;
+      font-size: 1rem;
       background: #fafbfc;
-      color: #222;
-      outline: none;
-      transition: border 0.2s, box-shadow 0.2s;
-      box-shadow: none;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
     .container {
       border-radius: 18px;
@@ -385,31 +363,106 @@
       border: 1.5px solid #444;
     }
     @media (max-width: 700px) {
-      .header-bar {
+      .container {
         max-width: 100vw;
-        padding: 48px 18px 0 18px;
+        margin: 0 0 32px 0;
+        padding: 8px 4px 48px 4px;
+        gap: 12px;
+        border-radius: 10px;
+        margin-top: 56px !important;
+      }
+      .shop-card {
+        min-width: 98vw;
+        max-width: 99vw;
+        margin: 0 auto 10px auto;
+        border-radius: 10px;
+        font-size: 0.98rem;
+      }
+      .shop-card img {
+        height: 90px;
       }
       .caf-title {
-        font-size: 2rem;
+        font-size: 1.7rem;
+        margin-left: 8px;
         letter-spacing: 1.2px;
+        line-height: 1.3;
+        gap: 8px;
+        margin-top: 18px;
+      }
+      .header-bar {
+        max-width: 100vw;
+        padding-top: 4px;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+      }
+      .profile-btn {
+        position: absolute;
+        top: 18px;
+        right: 8px;
+        margin: 0;
       }
       .shoplist-bar {
+        max-width: 100vw;
+        width: 100vw;
+        flex-direction: row;
+        gap: 8px;
+        padding: 0 2vw;
+        align-items: center;
+        justify-content: center;
+      }
+      #shopSearch {
+        width: 65vw;
+        min-width: 120px;
+        max-width: 70vw;
+        font-size: 1rem;
+        border-radius: 14px;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 10px 12px;
+        display: inline-block;
+      }
+      #shopSort {
+        width: 28vw;
+        min-width: 70px;
+        max-width: 32vw;
+        font-size: 1rem;
+        border-radius: 14px;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 10px 12px;
+        display: inline-block;
+      }
+      .shop-card .fav-icon {
+        bottom: 10px;
+        right: 12px;
+        font-size: 2rem;
+      }
+      .shop-card .fav-icon svg {
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+    @media (max-width: 700px) {
+      .shoplist-bar {
         max-width: 96vw;
-        width: calc(100% - 16px);
-        margin: 20px auto 10px auto;
-        padding: 14px 16px 18px 16px;
+        width: 96vw;
+        margin: 30px auto 10px auto;
+        padding: 0 3vw;
+        gap: 8px;
         flex-direction: column;
         align-items: stretch;
       }
       #shopSearch {
         width: 100%;
         max-width: none;
+        margin: 0;
       }
       #shopSort {
         width: 32vw;
-        min-width: 110px;
         max-width: 32vw;
         align-self: flex-end;
+        margin: 6px 0 0 0;
       }
     }
     /* Dark mode styles */
