--- a/shop-list.html
+++ b/shop-list.html
@@ -43,6 +43,7 @@
       text-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
       margin: 0;
     }
+    /* Profile picture alignment */
     .profile-btn {
       position: absolute;
       top: 16px;
@@ -50,6 +51,7 @@
       background: none;
       border: none;
       cursor: pointer;
+      margin: 0; /* Ensure no extra margin */
     }
     .profile-btn img {
       width: 48px;
@@ -99,15 +101,16 @@
       background: #e0f7fa;
       color: #172b90;
     }
+    /* Search bar alignment */
     .shoplist-bar {
       width: 100%;
-      max-width: 96vw;
-      margin: 10px auto 0 auto;
+      max-width: 900px; /* Ensure it stays within the container */
+      margin: 10px auto;
       display: flex;
       flex-direction: column;
       gap: 8px;
       align-items: stretch;
-      padding: 0 16px;
+      padding: 0 16px; /* Add padding for consistent margins */
     }
     #shopSearch {
       width: 100%;
