--- a/shop-list.html
+++ b/shop-list.html
@@ -22,42 +22,40 @@
       background: white;
       z-index: -1;
     }
+    /* Header Bar */
     .header-bar {
       width: 100%;
       max-width: 900px;
       margin: 0 auto;
       display: flex;
-      flex-direction: column;
+      flex-direction: row; /* Align title and profile icon horizontally */
       align-items: center;
-      justify-content: center;
-      padding: 20px 16px;
-      position: relative;
-      gap: 12px;
+      justify-content: space-between; /* Space between title and profile icon */
+      padding: 16px 12px; /* Adjust padding for smaller screens */
     }
+    /* Title Alignment */
     .caf-title {
-      text-align: center;
-      font-size: 2.2rem;
+      text-align: left; /* Align title to the left */
+      font-size: 1.8rem; /* Adjust font size for mobile */
       font-weight: 900;
-      letter-spacing: 1.5px;
+      letter-spacing: 1.2px;
       color: #004aad;
       text-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
       margin: 0;
     }
-    /* Profile picture alignment */
+    /* Profile Picture Alignment */
     .profile-btn {
-      position: absolute;
-      top: 16px;
-      right: 16px;
+      position: relative;
+      margin-left: auto; /* Push the icon to the far right */
       background: none;
       border: none;
       cursor: pointer;
-      margin: 0; /* Ensure no extra margin */
     }
     .profile-btn img {
-      width: 48px;
-      height: 48px;
+      width: 40px; /* Reduce size for mobile */
+      height: 40px;
       border-radius: 50%;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.10);
       border: 2px solid #ffe066;
       background: #073a47;
       object-fit: cover;
