--- a/shop-list.html
+++ b/shop-list.html
@@ -22,8 +22,20 @@
       background: white;
       z-index: -1;
     }
+    /* Background for the upper section */
+    .upper-background {
+      background: url('https://www.nottingham.edu.my/AboutUs/images-multimedia/15th-Anniversary/714x335-history.jpg') no-repeat center center;
+      background-size: cover;
+      width: 100%;
+      height: 300px; /* Adjust height as needed */
+      position: relative;
+      z-index: 1;
+    }
     /* Header Bar */
     .header-bar {
+      position: absolute; /* Make it float over the background */
+      top: 0;
+      left: 0;
       width: 100%;
       max-width: 900px;
       margin: 0 auto;
@@ -32,6 +44,7 @@
       align-items: center;
       justify-content: space-between; /* Space between title and profile icon */
       padding: 16px 12px; /* Adjust padding for smaller screens */
+      z-index: 2; /* Ensure it stays above the background */
     }
     /* Title Alignment */
     .caf-title {
@@ -269,31 +282,45 @@
       color: #f4f6f9;
       box-shadow: 0 8px 32px rgba(0,0,0,0.48);
     }
+    /* Settings Modal */
     #settingsModal {
       position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(0,0,0,0.28);
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.28);
       z-index: 9998;
-      display: none;
+      display: flex; /* Use flexbox for centering */
+      justify-content: center; /* Center horizontally */
+      align-items: center; /* Center vertically */
       backdrop-filter: blur(2px);
     }
+
     .settings-modal-content {
       background: linear-gradient(120deg, #f4f6f9 60%, #e0f7fa 100%);
       color: #222;
       padding: 38px 32px 32px 32px;
       border-radius: 22px;
-      box-shadow: 0 12px 48px rgba(0,0,0,0.22);
+      box-shadow: 0 12px 48px rgba(0, 0, 0, 0.22);
       max-width: 370px;
-      margin: 100px auto;
-      position: relative;
-      top: 10vh;
-      animation: modalPop 0.4s cubic-bezier(.4,1.6,.4,1);
+      width: 90%; /* Ensure responsiveness on smaller screens */
+      animation: modalPop 0.4s cubic-bezier(.4, 1.6, .4, 1);
     }
+
     @keyframes modalPop {
-      0% { opacity: 0; transform: scale(0.92);}
-      80% { opacity: 1; transform: scale(1.04);}
-      100% { opacity: 1; transform: scale(1);}
+      0% {
+        opacity: 0;
+        transform: scale(0.92);
+      }
+      80% {
+        opacity: 1;
+        transform: scale(1.04);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
     .settings-modal-content h2 {
       margin-top: 0;
@@ -522,6 +549,7 @@
 </head>
 <body>
   <div class="background"></div>
+  <div class="upper-background"></div>
   <div class="header-bar">
     <div class="caf-title">UNM Cafeteria</div>
     <button class="profile-btn" id="profileBtn">
